Inicialização OTHERSNEWS - Mobile

--- a/index.html
+++ b/index.html
@@ -80,6 +80,16 @@
             </div>
         </div>
     </div>
+    <div class="othersnews">
+        <div class="othersnews1">
+            <div class="othersnews1img">
+                <img src="C:\Users\diogo.donner\Documents\GitHub\Atividade-Noticias\Viaduto 470 - INDAIAL.jpg" alt="Viaduto 470 entrada de Indaial" width="120">
+            </div>
+            <div class="othersnews1txt">
+                Transito de Indaial um CAOS
+            </div>
+        </div>
+    </div>
 
 
 
