Adição segunda 'othernews' e responsividadepara telas com 1279+

--- a/index.html
+++ b/index.html
@@ -81,12 +81,25 @@
         </div>
     </div>
     <div class="othersnews">
+        <div class="textother">
+        <h3>
+            Outras Notícias
+        </h3>
+    </div>
         <div class="othersnews1">
             <div class="othersnews1img">
                 <img src="C:\Users\diogo.donner\Documents\GitHub\Atividade-Noticias\Viaduto 470 - INDAIAL.jpg" alt="Viaduto 470 entrada de Indaial" width="120">
             </div>
             <div class="othersnews1txt">
-                Transito de Indaial um CAOS
+                <b>Transito de Indaial um CAOS</b>
+            </div>
+        </div>
+        <div class="othersnews2">
+            <div class="othersnews2img">
+                <img src="C:\Users\diogo.donner\Documents\GitHub\Atividade-Noticias\CLT.jpg" alt="Viaduto 470 entrada de Indaial" width="120">
+            </div>
+            <div class="othersnews2txt">
+                <b>Fim da escala 6x1</b>
             </div>
         </div>
     </div>
